unpackaged/main/default/objects/Show_Opportunity_Alert__c/Show_Opportunity_Alert__c.object-meta.xml
<CustomObject>
    <description>Show opportunity specific alert</description>
    <label>Show Opportunity Alert</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Alert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Show Opportunity Alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>