unpackaged/main/default/objects/Show_Opportunity_Alert__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>