unpackaged/main/default/objects/Show_Opportunity_Alert__c/fields/Show_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Show_Opportunity__c</fullName>
    <description>Show opportunity for the child alert</description>
    <label>Show Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Show Opportunity Alerts</relationshipLabel>
    <relationshipName>Show_Opportunity_Alerts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>